# ChangeLog for sci-biology/jellyfish
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  jellyfish-2.1.3.ebuild, jellyfish-2.1.4.ebuild:
  sci-biology/jellyfish: added missing DEPEND on virtual/pkgconfig so that the
  jellyfish-2.0.pc gets installed properly

  31 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  jellyfish-2.1.3.ebuild:
  sci-biology/jellyfish: fix /usr/lib64/pkgconfig/jellyfish-2.0.pc

  31 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  jellyfish-2.1.3.ebuild:
  sci-biology/jellyfish: fix installation of header *.hpp files into
  /usr/include/jellyfish-2.1.3/jellyfish/ broken somewhere in upstream's code

  07 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  jellyfish-2.1.3.ebuild:
  added a comment on old version

*jellyfish-2.1.3 (02 Jul 2014)

  02 Jul 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +jellyfish-2.1.3.ebuild, +metadata.xml:
  sci-biology/jellyfish: new package, works