@@ -1,3 +1,5 @@
 DIST JellyfishUserGuide.pdf 142367 SHA256 6f4365f1839b0370fff50fcd25ffcf2dad4192c2ff5b8540fd929d73a8cf85c3 SHA512 a9d65be7591d4b9b275b9f76ab79806d31bf7ef36b297b67b1802a302687aa8d49d4c491c3bb9201aec58268bcfc8c703940c72991b9080bbd1bde95bbda5b8a WHIRLPOOL 1c57b1596ccfff2159bb86359f9dafac1f994b33ab38dc334827d74b8c7541728c6c8b400df54d756bfa0b98ae023fae020ccbebbb24e3eb51baccac5024a6e6
+DIST jellyfish-1.1.11.tar.gz 1067138 SHA256 496645d96b08ba35db1f856d857a159798c73cbc1eccb852ef1b253d1678c8e2 SHA512 aea7373e5ffb9deba7e164425bd7d4219d9be1e48ca666ff41e70bbc77026bc581273fb5a07c47894e2b31dd1339d4f1bc1a7b0501f10a482353ecde082eed1a WHIRLPOOL d2f31e39c1d4ce4fab78abd33c62c79bf950fdfab4f5283713e67deab8e1dabc3fd1c6cf09de964a6707793426abca24c05afe0dcf5365e04ae97dda15da2040
 DIST jellyfish-2.1.3.tar.gz 955773 SHA256 00530abd01c1253646f29fa4554e96fd31148ed92402940e6f357bd5cab38e9b SHA512 2b6fea6c2686de7b568988543d5a9466676eb17252ecce3243b0dc7e3c833aed02ae6570749df58c2921289db0167b39848ccd80eb3cc568cdbaa0045114b702 WHIRLPOOL 4a1e6568932db0cc4773e89e4b8f049e96ed929723ffd518ce7e0ed12bd29041d0774fba1069251a336e448dd75703a350917ffc3db5a35f2cfac828572da566
 DIST jellyfish-2.1.4.tar.gz 958038 SHA256 c4e692170d33efa9e6e4f0b134d8e257fb802832af17fdc53ac468bf8f0f29a5 SHA512 28bbaf6ed5c69caec24a09ceb2dfa99b160f3a9c2764d3f30ab205374a6f17dfc5c6d7405e75fd5161882350db160442a91568dd65ea9851e8cb74eb71f25742 WHIRLPOOL c588f4642ff0474e0565f63d2c17db03b90fa302dff9c678766e589142bc9f71a0b48e2088b24b2df15955cae85ab43aaa1ae79066113a144c8ee8bfa75594f3
+DIST jellyfish-manual-1.1.pdf 241464 SHA256 60738f790ba50baeba04de60fdc3f620fe670d3067501d472c7b42a401600c88 SHA512 b697c51af5bd85b779fea4f03772ac8e21713f906773350931a7d67adecb4268b051e766173122ad2ba9d168235f534ff6eaa070496d6318cf8a76c8690ab61c WHIRLPOOL 01b0fff7373b40b125be3b5d44bc0af62704e84e449943235cc8b8331ff73c6d5d4be4e69040d8bc54ae1e12e377cbe4fd66108b7fcee8379d69568e8809bb5c
