@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*jellyfish-1.1.11 (30 Apr 2015)
+
+  30 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  +jellyfish-1.1.11.ebuild, jellyfish-2.1.3.ebuild, jellyfish-2.1.4.ebuild:
+  sci-biology/jellyfish: added older version, added HalfLICENSE to all ebuilds
+
   30 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
   jellyfish-2.1.3.ebuild, jellyfish-2.1.4.ebuild:
   sci-biology/jellyfish: added missing DEPEND on virtual/pkgconfig so that the
